# matrix-cpp-logging

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: build.sh
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  common.cmake  pch.h
src/logging/include/: logger.h
src/logging/include/common/: ArgumentNullException.h  BaseException.h  Consts.h  FileLoadException.h  FileNotExistsException.h  Guard.h  Initializer.h  MapExtensions.h  MapValueDescriptor.h  ObjectMap.h  Platform.h  Stopwatch.h  StringExtensions.h  TextFormatter.h  VectorExtensions.h  WinStringExtensions.h
src/logging/include/logging/: BaseLoggerProvider.h  Configuration.h  ConsoleColorRender.h  ConsoleLogger.h  ConsoleLoggerProvider.h  ILogger.h  ILoggerFactory.h  ILoggerProvider.h  InternalLogger.h  LogIndentLayout.h  LogLayout.h  LogLayoutRepository.h  LogLevel.h  LogLevelConverter.h  LogLevelLayout.h  LogLevels.h  LogMessage.h  LogMessageLayout.h  LogMessageName.h  LogNameLayout.h  LogNoneLayout.h  LogProcessIdLayout.h  LogTextLayout.h  LogThreadIdLayout.h  LogTimestampLayout.h  LoggerBase.h  LoggerConfig.h  LoggerContext.h  LoggerFactory.h  VsOutput.h  VsOutputLogger.h  VsOutputLoggerProvider.h
src/logging/src/common/: ArgumentNullException.cpp  BaseException.cpp  Consts.cpp  FileLoadException.cpp  FileNotExistsException.cpp  Guard.cpp  Platform.cpp  Stopwatch.cpp  StringExtensions.cpp  TextFormatter.cpp  VectorExtensions.cpp
src/logging/src/logging/: BaseLoggerProvider.cpp  Configuration.cpp  ConsoleColorRender.cpp  ConsoleLogger.cpp  ConsoleLoggerProvider.cpp  InternalLogger.cpp  LogIndentLayout.cpp  LogLayout.cpp  LogLayoutRepository.cpp  LogLevel.cpp  LogLevelConverter.cpp  LogLevelLayout.cpp  LogLevels.cpp  LogMessage.cpp  LogMessagelayout.cpp  LogNameLayout.cpp  LogNoneLayout.cpp  LogProcessIdLayout.cpp  LogTextLayout.cpp  LogThreadIdLayout.cpp  LogTimestampLayout.cpp  LoggerBase.cpp  LoggerConfig.cpp  LoggerContext.cpp  LoggerFactory.cpp  VsOutput.cpp  VsOutputLogger.cpp  VsOutputLoggerProvider.cpp
tests/: CMakeLists.txt
tests/blank-app/: CMakeLists.txt  main.cpp
tests/unit-tests/: CMakeLists.txt  main.cpp  pch.h
tests/unit-tests/include/: Circle.h  Messages.h  Rectangle.h  Shape.h  ShapeContainer.h  platformCheckMacros.h
tests/unit-tests/src/: Circle.cpp  Messages.cpp  Rectangle.cpp  Shape.cpp  ShapeContainer.cpp
tests/unit-tests/tests/: DummyTests.cpp
tests/unit-tests/tests/common/: ArgumentNullExceptionTests.cpp  GuardTests.cpp  MapExtensionsTests.cpp  ObjectMapTests.cpp  StopwatchTests.cpp  TextFormatterTests.cpp  VectorExtensionsTests.cpp  stringextensionstests.cpp
tests/unit-tests/tests/logging/: ConfigurationTests.cpp  ConsoleColorRenderTests.cpp  ConsoleLoggerConfigTests.cpp  ConsoleLoggerProviderTests.cpp  ConsoleLoggerTests.cpp  InternalLoggerTests.cpp  LogIndentLayoutTests.cpp  LogLayoutRepositoryTests.cpp  LogLevelConverterTests.cpp  LogLevelLayoutTests.cpp  LogLevelTests.cpp  LogMessageLayoutTests.cpp  LogMessageTests.cpp  LogNameLayoutTests.cpp  LogNoneLayoutTests.cpp  LogProcessIdLayoutTests.cpp  LogThreadIdLayoutTests.cpp  LogTimestampLayoutTests.cpp  LoggerFactoryTests.cpp  VsOutputLogger.cpp  VsOutputLoggerProviderTests.cpp  loglevelstests.cpp
